--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,68 @@ img {
   display: block;
   max-width: 100%;
 }
+
+button {
+  padding: 12px 30px;
+  margin-left: 20px;
+  border: 2px solid rgb(15, 197, 221);
+  border-radius: 5px;
+  background-color: rgb(127, 215, 219);
+  font-size: 17px;
+}
+
+input {
+  padding: 12px 10px;
+    border: 2px solid rgb(15, 197, 221);
+      border-radius: 5px;
+      background-color: rgb(127, 215, 219);
+      text-align: center;
+      font-size: 17px;
+}
+
+button:hover,
+button:focus,
+input:hover,
+input:focus {
+  border-color: rgb(53, 53, 240);
+}
+
+.timer {
+  display: flex;
+  background-color: rgb(138, 223, 194);
+  margin-top: 20px;
+  padding: 15px 20px;
+  width: 500px;
+  justify-content: space-evenly;
+  text-align: center;
+  border-radius: 5px;
+  
+}
+
+.value {
+  font-size: 20px;
+
+}
+
+.label{
+background-color: rgb(168, 227, 250);
+margin-top: 10px;
+font-size: 17px;
+padding: 2px 10px;
+}
+
+span {
+  display: block;  
+}
+
+.disabled {
+    border: 2px solid rgb(190, 226, 235);
+    background-color: rgb(157, 219, 223);
+}
+
+.disabled > button:focus,
+.disabled > button:hover,
+.disabled > input:hover,
+.disabled > input:focus {
+  border-color: rgb(190, 226, 235);
+}
